# Algorithms

./: .gitignore  CMakeLists.txt  CircleList.c  CircleList.h  DoublyLinkedList.c  DoublyLinkedList.h  LinkedList.c  LinkedList.h  LinkedStack.c  LinkedStack.h  README.md  SeqList.c  SeqList.h  Sort.c  Sort.h  SqList.c  SqList.h  des.c  des.h  format.sh  main.c
Functional/: .gitignore  Functional.cabal  LICENSE
Functional/src/: BinarySearch.hs  Boolean.hs  Calendar.hs  Function.hs  Main.hs  Rome.hs  Sort.hs
Temp/: LinkedList.c.temp  LinkedList.h.temp
